; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/serial/extr_quatech2.c_qt2_write_room.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/serial/extr_quatech2.c_qt2_write_room.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.usb_serial_port* }
%struct.usb_serial_port = type { i32 }
%struct.qt2_port_private = type { i32, i64 }

@QT2_WRITE_BUFFER_SIZE = common dso_local global i32 0, align 4
@QT2_WRITE_CONTROL_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty_struct*)* @qt2_write_room to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qt2_write_room(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.tty_struct*, align 8
  %3 = alloca %struct.usb_serial_port*, align 8
  %4 = alloca %struct.qt2_port_private*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.tty_struct* %0, %struct.tty_struct** %2, align 8
  %7 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %8 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %7, i32 0, i32 0
  %9 = load %struct.usb_serial_port*, %struct.usb_serial_port** %8, align 8
  store %struct.usb_serial_port* %9, %struct.usb_serial_port** %3, align 8
  store i64 0, i64* %5, align 8
  %10 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %11 = call %struct.qt2_port_private* @usb_get_serial_port_data(%struct.usb_serial_port* %10)
  store %struct.qt2_port_private* %11, %struct.qt2_port_private** %4, align 8
  %12 = load %struct.qt2_port_private*, %struct.qt2_port_private** %4, align 8
  %13 = getelementptr inbounds %struct.qt2_port_private, %struct.qt2_port_private* %12, i32 0, i32 0
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.qt2_port_private*, %struct.qt2_port_private** %4, align 8
  %17 = getelementptr inbounds %struct.qt2_port_private, %struct.qt2_port_private* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i32 0, i32* %6, align 4
  br label %25

21:                                               ; preds = %1
  %22 = load i32, i32* @QT2_WRITE_BUFFER_SIZE, align 4
  %23 = load i32, i32* @QT2_WRITE_CONTROL_SIZE, align 4
  %24 = sub nsw i32 %22, %23
  store i32 %24, i32* %6, align 4
  br label %25

25:                                               ; preds = %21, %20
  %26 = load %struct.qt2_port_private*, %struct.qt2_port_private** %4, align 8
  %27 = getelementptr inbounds %struct.qt2_port_private, %struct.qt2_port_private* %26, i32 0, i32 0
  %28 = load i64, i64* %5, align 8
  %29 = call i32 @spin_unlock_irqrestore(i32* %27, i64 %28)
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local %struct.qt2_port_private* @usb_get_serial_port_data(%struct.usb_serial_port*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
